# corvin

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.repro  LICENSE  README.md  SECURITY.md  clippy.toml  justfile  minisign.pub  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  desktop.yml  release.yml
crates/core/: Cargo.toml
crates/core/fuzz/: Cargo.toml  README.md
crates/core/fuzz/fuzz_targets/: describe_policy.rs  parse_input.rs
crates/core/src/: at_rest.rs  descriptor.rs  lib.rs  seed.rs  silent_payments.rs  sp_scanner.rs  types.rs  wallet.rs  wallet_store.rs
crates/core/src/backends/: electrum.rs  mod.rs  rpc.rs
crates/desktop/: Cargo.toml  Entitlements.plist  Info.plist  README.md  build.rs  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/permissions/autogenerated/: print.toml
crates/desktop/splash/: index.html
crates/desktop/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: api_tests.rs  config.rs  harden.rs  lib.rs  main.rs  payjoin_sessions.rs  payjoin_subscriber.rs  sp_outputs.rs  sp_subscriber.rs  state.rs  subscriber.rs
crates/server/src/api/: address_labels.rs  backends.rs  backup.rs  backup_test.rs  bip329.rs  bip353.rs  broadcast.rs  categories.rs  cost_basis.rs  descriptor_util.rs  events.rs  hwi.rs  labels.rs  ledger_hmac_store.rs  messages.rs  mod.rs  prices.rs  proxy.rs  security.rs  settings.rs  silent_payments.rs  sweep.rs  utxo_freeze.rs  utxo_labels.rs
crates/server/src/api/hwi/: bitbox.rs  ledger.rs  trezor.rs
crates/server/src/api/wallets/: crud.rs  mod.rs  multisig.rs  payjoin_receive.rs  payjoin_send.rs  reads.rs  seed_signer.rs  send.rs  sp_send.rs  sp_spend.rs  sync.rs  tax.rs  vault.rs
docs/: architecture-conventions.md  at-rest-encryption.md  audit-2026-05-31.md  audit-2026-06-03-robustness.md  audit-2026-06-03.md  audit-2026-06.md  audits.md  frontend-testing.md  per-wallet-backend.md  positioning.md  privacy-audit.md  releases.md  reproducible-builds.md  start9-hardware-signing.md  ux-testing-guide.md  verification-plan.md
frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: app.html
frontend/src/components/: AddAccountModal.svelte  AddressLookupModal.svelte  AddressTable.svelte  BackendsSection.svelte  BalanceChart.svelte  BalanceHero.svelte  BroadcastModal.svelte  CategoryChip.svelte  CategoryPicker.svelte  ChangeBackendModal.svelte  ConsolidateModal.svelte  DeleteWalletModal.svelte  DisplayPage.svelte  EmptyState.svelte  FeeBumpModal.svelte  HelpContent.svelte  HelpLink.svelte  HelpPage.svelte  ImportExportPage.svelte  KindPicker.svelte  MessagesModal.svelte  MobileLayout.svelte  MobileSettingsMenu.svelte  MobileWalletList.svelte  MsSignerCard.svelte  MultisigCreatePanel.svelte  OnboardingWizard.svelte  PolicySignerCard.svelte  PsbtInspectorModal.svelte  QrScanModal.svelte  QrSignFlow.svelte  ReceiveModal.svelte  SecurityPage.svelte  SeedGeneratorPanel.svelte  ServerPage.svelte  SpCreatePanel.svelte  SpSpendModal.svelte  SweepWifModal.svelte  TestBackupModal.svelte  ToastContainer.svelte  (+12 more)
frontend/src/components/send/: CoinControlPanel.svelte  FeePicker.svelte  RecipientRow.svelte  SendFlow.svelte
frontend/src/components/ui/: AmountInput.svelte  BusyButton.svelte  CopyButton.svelte  Modal.svelte
frontend/src/lib/: amount.test.ts  amount.ts  api.ts  backup_crypto.ts  bip39.test.ts  bip39.ts  bip39_words.ts  derivation.ts  import.test.ts  import.ts  mobile.ts  password.test.ts  password.ts  public-servers.ts  qr.test.ts  qr.ts  search.test.ts  search.ts  send.test.ts  send.ts  types.ts  utils.test.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/add-wallet/: +page.svelte
frontend/src/routes/help/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/settings/backend/: +page.svelte
frontend/src/routes/settings/display/: +page.svelte
frontend/src/routes/settings/import-export/: +page.svelte
frontend/src/routes/settings/security/: +page.svelte
frontend/src/routes/wallet/[id]/: +page.svelte
frontend/src/routes/wallet/[id]/tax-report/: +page.svelte
frontend/src/stores/: address_labels.ts  categories.ts  cost_basis.ts  labels.ts  onboarding.ts  payjoin.ts  security.ts  server.ts  settings.ts  theme.ts  toasts.ts  ui.ts  utxo_freeze.ts  utxo_labels.ts  wallets.ts
packaging/: README.md
packaging/udev/: 51-corvin.rules
scripts/: repro-build.sh  sign-release.sh  verify-release.sh
