[package]
name = "corvin-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "corvin-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
corvin = { path = "../server" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Cross-platform "open in default browser" (xdg-open / open / start).
open = "5"
tokio.workspace = true
anyhow.workspace = true
axum.workspace = true
tracing.workspace = true

# Camera/QR scanning: WebKitGTK needs media-stream enabled and the
# permission-request signal answered before getUserMedia works.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_2"] }
# For running the print dialog from the webview's `print` signal.
gtk = "0.18"
