[package]
name = "corvin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "corvin"
path = "src/lib.rs"

[[bin]]
name = "corvin"
path = "src/main.rs"

[dependencies]
corvin-core = { path = "../core" }

bdk_wallet.workspace = true
bdk_electrum.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

# SSE
tokio-stream = { version = "0.1", features = ["sync"] }

# Bounded-concurrency streams (used for parallel price fetches)
futures-util = "0.3"

# Static file embedding
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

# Directory paths
dirs = "5"

# HTTP client for price lookups
reqwest = { version = "0.12", features = ["json", "socks"] }

# Base64 / hex for PSBT serialization
base64 = "0.22"
hex = "0.4"

# Hardware wallets (native USB) — gated behind the `hw` feature (on by default).
# The Start9 / headless build turns this off (StartOS has no USB passthrough; it
# signs via air-gapped QR/PSBT), which also drops libusb/libudev from the image.
bitbox-api = { workspace = true, optional = true }

# Wipe sensitive request bodies (seed phrases, passphrases) from memory after use
zeroize = "1"
bip322 = "0.0.10"
bip39 = "2.2.2"
# BIP-352 receiver math (Receiver::scan_transaction). Same crate corvin-core
# uses for key derivation/sending math — version in sync.
silentpayments = { version = "0.5.0", default-features = false, features = ["encode", "receiving", "sending"] }
ledger_bitcoin_client = { version = "0.6.2", optional = true }
ledger-transport-hid = { version = "0.11.0", optional = true }
async-trait = { version = "0.1.89", optional = true }
bitcoin.workspace = true
ledger-transport = { version = "0.11.0", optional = true }
trezor-client = { version = "0.1.5", default-features = false, features = ["bitcoin"], optional = true }
dnssec-prover = "0.6.8"
payjoin = { version = "0.25.0", features = ["v1", "v2", "io"] }

[features]
# `hw` = native USB hardware-wallet support (BitBox/Ledger/Trezor). On by default
# (desktop). The Start9 / headless build uses `--no-default-features` so the binary
# carries no USB stack and signs via air-gapped QR/PSBT instead.
default = ["hw"]
hw = [
    "dep:bitbox-api",
    "dep:ledger_bitcoin_client",
    "dep:ledger-transport-hid",
    "dep:ledger-transport",
    "dep:trezor-client",
    "dep:async-trait",
]

# Process-level secret hygiene (core-dump suppression) — Unix only.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# `test-utils` exposes in-memory wallet funding helpers (insert_checkpoint,
# receive_output_in_latest_block) used by the send-path regtest tests, which
# fund a real BDK wallet and drive the send handler with no live backend.
bdk_wallet = { workspace = true, features = ["test-utils"] }
