[package]
name = "corvin-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
corvin-core = { path = ".." }
# Same major as BDK 3's reexport, so `bitcoin::Network` is the type `parse_input` expects.
bitcoin = "0.32"

[[bin]]
name = "parse_input"
path = "fuzz_targets/parse_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "describe_policy"
path = "fuzz_targets/describe_policy.rs"
test = false
doc = false
bench = false

# Fuzz binaries don't need their own debug-assert-heavy profiles tuned here; the
# defaults from cargo-fuzz apply. Keep this crate out of the main workspace.
[workspace]
